force-app/main/default/objects/EYI_Applicants__c/EYI_Applicants__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <label>Applicants Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>