force-app/main/default/objects/EYI_Applicants__c/fields/Aadhar_Response__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Response__c</fullName>
    <label>Aadhar Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>