force-app/main/default/objects/EYI_Applicants__c/fields/Applicant_Correspondance_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Correspondance_Address__c</fullName>
    <label>Applicant Correspondance Address</label>
    <type>Address</type>
</CustomField>