force-app/main/default/objects/EYI_Applicants__c/fields/Customer_residential_status__c.field-meta.xml
<CustomField>
    <fullName>Customer_residential_status__c</fullName>
    <label>Customer Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals of Indian Origin</fullName>
                <isActive>false</isActive>
                <label>Foreign Nationals of Indian Origin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>