force-app/main/default/objects/EYI_Applicants__c/fields/DigiLocker_Process_Description_Response__c.field-meta.xml
<CustomField>
    <fullName>DigiLocker_Process_Description_Response__c</fullName>
    <label>DigiLocker Process Description Response</label>
    <type>TextArea</type>
</CustomField>