force-app/main/default/objects/EYI_Applicants__c/fields/E_Sign_Done__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Sign Done</label>
    <type>Checkbox</type>
</CustomField>