force-app/main/default/objects/EYI_Applicants__c/fields/E_Sign_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Transaction_Id__c</fullName>
    <label>E-Sign Transaction Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>