force-app/main/default/objects/EYI_Applicants__c/fields/EKYC_Link__c.field-meta.xml
<CustomField>
    <fullName>EKYC_Link__c</fullName>
    <label>EKYC Link</label>
    <type>Url</type>
</CustomField>