force-app/main/default/objects/EYI_Applicants__c/fields/Esign_Response__c.field-meta.xml
<CustomField>
    <fullName>Esign_Response__c</fullName>
    <label>Esign Response</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>