force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>