force-app/main/default/objects/EYI_Applicants__c/fields/EYI_AccountName__c.field-meta.xml
<CustomField>
    <fullName>EYI_AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>