force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Address_Proof_Document__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_Proof_Document__c</fullName>
    <label>Address Proof Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Voter’s ID Card</fullName>
                <label>Voter ID Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>