force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Address_Proof_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_Proof_Number__c</fullName>
    <label>Address Proof Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>