force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Age__c.field-meta.xml
<CustomField>
    <fullName>EYI_Age__c</fullName>
    <formula>YEAR(TODAY())  -  YEAR(EYI_DOB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>