force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anniversary_Date__c</fullName>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>