force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Applicant_Address__c</fullName>
    <label>Applicant Address</label>
    <type>Address</type>
</CustomField>