force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Applicant_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Applicant_No__c</fullName>
    <label>Applicant No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>