force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Applicant_Type__c</fullName>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Applicant</fullName>
            </value>
            <value>
                <fullName>Co-applicant</fullName>
            </value>
            <value>
                <fullName>AADHAR Card Number</fullName>
                <isActive>false</isActive>
                <label>AADHAR Card Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>