force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Booking__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>EYI_Booking__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>