force-app/main/default/objects/EYI_Applicants__c/fields/EYI_City2__c.field-meta.xml
<CustomField>
    <fullName>EYI_City2__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>