force-app/main/default/objects/EYI_Applicants__c/fields/EYI_City_report__c.field-meta.xml
<CustomField>
    <fullName>EYI_City_report__c</fullName>
    <formula>IF(EYI_City__r.Name = &quot;Pune&quot; ,&quot;Pune&quot;,
IF((EYI_City__r.Name = &quot;Mumbai&quot; || EYI_City__r.Name = &quot;Navi mumbai&quot;), &quot;Mumbai&quot;,
IF((EYI_City__r.Name &lt;&gt; &quot;Pune&quot; || EYI_City__r.Name &lt;&gt; &quot;Mumbai&quot;) &amp;&amp; ISPICKVAL(EYI_State__c , &quot;Maharashtra&quot; ) ,&quot;ROM&quot;,
IF(ISPICKVAL(EYI_Country__c , &quot;India&quot; ), &quot;ROI&quot;,
IF(ISBLANK(TEXT(EYI_Country__c)), &quot;Not Mentioned&quot;,
&quot;NRI&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City report</label>
    <type>Text</type>
</CustomField>