force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Applicant_Classification</valueSetName>
    </valueSet>
</CustomField>