force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>