force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Designation_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Designation_Type__c</fullName>
    <label>Designation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Executive</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Sr Executive</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Deputy Manager</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Associate Manager</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Manager</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Senior Manager</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Deputy GM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>General Manager</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Senior GM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Associate VP</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Vice President</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Executive VP</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Senior VP</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>President</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Associate Director</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Director</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Executive Director</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Managing Director</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>CxO</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Software Engineer</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Consultant</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Project Manager</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Program Manager</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Product Manager</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Developer</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Supervisor</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>CEO</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>CFO</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>CTO</label>
            </value>
            <value>
                <fullName>39</fullName>
                <label>CMD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>