force-app/main/default/objects/EYI_Applicants__c/fields/EYI_DOB__c.field-meta.xml
<CustomField>
    <fullName>EYI_DOB__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>