force-app/main/default/objects/EYI_Applicants__c/fields/EYI_EKYC_Link2__c.field-meta.xml
<CustomField>
    <fullName>EYI_EKYC_Link2__c</fullName>
    <formula>$Label.EYI_EKYC_Link &amp; &apos;applicantekyc/?appid=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EKYC Link2</label>
    <type>Text</type>
</CustomField>