force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Employer_Name__c</fullName>
    <label>Employer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>