force-app/main/default/objects/EYI_Applicants__c/fields/EYI_ESIGN_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_ESIGN_Link__c</fullName>
    <formula>$Label.EYI_EKYC_Link &amp; &apos;esign/?recappid=&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESIGN Link</label>
    <type>Text</type>
</CustomField>