force-app/main/default/objects/EYI_Applicants__c/fields/EYI_First_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Name__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>