force-app/main/default/objects/EYI_Applicants__c/fields/EYI_GSTIN_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>EYI_GSTIN_NUMBER__c</fullName>
    <label>GSTIN NUMBER</label>
    <length>18</length>
    <type>Text</type>
</CustomField>