force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Industry__c.field-meta.xml
<CustomField>
    <fullName>EYI_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYIU_Industry</valueSetName>
    </valueSet>
</CustomField>