force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Inventory__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_Inventory__c.EYI_Type__c</field>
            <operation>notEqual</operation>
            <value>Parking</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Inventory__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>