force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Landline_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Landline_Number__c</fullName>
    <label>Landline Number</label>
    <type>Phone</type>
</CustomField>