force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mailing_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing City</label>
    <referenceTo>EYI_City__c</referenceTo>
    <relationshipLabel>Applicants (Mailing City)</relationshipLabel>
    <relationshipName>Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>