force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Mailing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mailing_Pincode__c</fullName>
    <label>Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>