force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Mailing_state__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mailing_state__c</fullName>
    <label>Mailing state</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Mailing_state</valueSetName>
    </valueSet>
</CustomField>