force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Masked_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Masked_Mobile_Number__c</fullName>
    <formula>LPAD(RIGHT(EYI_Mobile_Number__c, 4), LEN(EYI_Mobile_Number__c), &apos;*&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>