force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>