force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Occupation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Occupation__c</fullName>
    <label>Occupation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>