force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Organisation_Country__c.field-meta.xml
<CustomField>
    <fullName>EYI_Organisation_Country__c</fullName>
    <label>Organisation Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country</valueSetName>
    </valueSet>
</CustomField>