force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Organisation_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Organisation_Pincode__c</fullName>
    <label>Office Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>