force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Pancard_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Pancard_Number__c</fullName>
    <label>Pancard Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>