force-app/main/default/objects/EYI_Applicants__c/fields/EYI_PassportNoDetails__c.field-meta.xml
<CustomField>
    <fullName>EYI_PassportNoDetails__c</fullName>
    <label>Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>