force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Permanent_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Permanent_Address__c</fullName>
    <label>Permanent Address</label>
    <type>TextArea</type>
</CustomField>