force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Reconciliation_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reconciliation_Account__c</fullName>
    <label>Reconciliation Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10250000</fullName>
                <label>Debtors : Lease / Rentals</label>
            </value>
            <value>
                <fullName>10250010</fullName>
                <label>Debtors : Group Company</label>
            </value>
            <value>
                <fullName>10250020</fullName>
                <label>Debtors : Unit Sales</label>
            </value>
            <value>
                <fullName>10250030</fullName>
                <label>Debtors : Others</label>
            </value>
            <value>
                <fullName>10250040</fullName>
                <label>Debtors : TDR</label>
            </value>
            <value>
                <fullName>10250050</fullName>
                <label>Debtors : Property</label>
            </value>
            <value>
                <fullName>10250060</fullName>
                <label>Debtors : Trading Sales</label>
            </value>
            <value>
                <fullName>10250070</fullName>
                <label>Debtors : Manufacturing Sales</label>
            </value>
            <value>
                <fullName>10250080</fullName>
                <label>Debtors : Power Distibution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>