force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Residential_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian National</fullName>
            </value>
            <value>
                <fullName>For NRI</fullName>
            </value>
            <value>
                <fullName>For Company</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals Of Indian Origin</fullName>
                <isActive>false</isActive>
                <label>Foreign Nationals Of Indian Origin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>