force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Salutation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Salutation</valueSetName>
    </valueSet>
</CustomField>