force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Second_Applicant__c.field-meta.xml
<CustomField>
    <fullName>EYI_Second_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Applicant</label>
    <type>Checkbox</type>
</CustomField>