force-app/main/default/objects/EYI_Applicants__c/fields/EYI_Signed_File__c.field-meta.xml
<CustomField>
    <fullName>EYI_Signed_File__c</fullName>
    <label>Signed File</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>